src/test/deca/context/invalid/created/return/return_int_void.deca
// Description :
//    return mauvais type : void, demandé bool
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: ?? 

class A{
int met(){
return ;
}
}